# django-abscrete

./: .gitignore  .travis.yml  README.rst  runtests.py  setup.cfg  tox.ini
abscrete/: models.py
abscrete/tests/: apps.py  models.py  tests.py
doc/: Makefile  conf.py  examples.rst  features.rst  index.rst  make.bat  quickstart.rst  under_the_hood.rst
example/: manage.py
example/django_abscrete/: settings.py  urls.py  wsgi.py
example/example_app/: apps.py  models.py
example/example_app/migrations/: 0001_initial.py
