[metadata]
name = django-abscrete
version = 1.0
description = Lightweight inheritance for Django models
long_description = file:README.rst
author = theenglishway
author_email = me@theenglishway.eu
maintainer = theenglishway
maintainer_email = me@theenglishway.eu
#url = https://github.com/django-polymorphic/django-polymorphic
#download_url = https://github.com/django-polymorphic/django-polymorphic/tarball/master
keywords = django, abscrete
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.5
	Topic :: Database

[options]
packages = find:
include_package_data = True
install_requires =
	Django >= 1.10

[options.packages.find]
exclude =
	abscrete.tests

[bdist_wheel]
universal = 1
